--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,22 @@
 	
 	<body>
 		<script src="../js/webtorrent.min.js">
-			
+var client = new WebTorrent()
+
+var torrentId = 'magnet:?xt=urn:btih:6a9759bffd5c0af65319979fb7832189f4f3c35d'
+
+client.add(torrentId, function (torrent) {
+  // Torrents can contain many files. Let's use the first.
+  var file = torrent.files[0]
+
+  // Display the file by adding it to the DOM. Supports video, audio, image, etc. files
+  file.appendTo('body')
+})
 		</script>
+		<center>
+			<video width="640" height="360" name="vide" controls>
+				<source src="" type="mpeg4/video" />
+			</video>
+		</center>
 	</body>
 </html>
